# prompts-manager

./: .gitignore  README.md  docker-compose.yml  docker-start.sh  docker-stop.sh  view-logs.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: database.py  logging_config.py  main.py
backend/app/core/: evaluation_metrics.py  evaluators.py
backend/app/models/: dataset_model.py  evaluation_result_model.py  prompt_model.py
backend/app/routers/: dataset_router.py  evaluation_router.py  prompt_router.py
backend/app/schemas/: dataset_schema.py  pagination_schema.py  prompt_schema.py  response_schema.py
backend/app/utils/: response_utils.py
backend/exported_datasets/: 01_data4.csv  02_질문답변-기본셋.csv  03_요약-뉴스셋.csv  04_번역-한영셋.csv  05_감정분석-리뷰셋.csv  06_추천-영화셋.csv  07_코딩-문제셋.csv  README.md
backend/migrations/: env.py
backend/migrations/versions/: 203f8122c0d1_initial_baseline.py
backend/scripts/: add_version_evaluation_data.py  direct_add_data.py  export_datasets_to_csv.py  standardize_datasets_raw.py  start.sh  stop.sh
frontend/: .env.development  .prettierrc  Dockerfile  LICENSE  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/api/service/: apiEndpoint.ts  apiService.ts  datasetsService.ts
frontend/src/components/: index.ts
frontend/src/libs/: axios.ts
frontend/src/pages/home/: Home.tsx  (+1 more)
frontend/src/styles/: _color.scss  _font.scss  _reset.scss  _size.scss  base.scss
frontend/src/types/: api.ts  common.ts
frontend/src/utils/: convertDateTime.ts
(+73 files in other folders)
