[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]
